--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tomik23/react-circular-progress-bar": "^1.1.1",
     "google-fonts": "^1.0.0",
+    "netlify-cli": "^10.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
